# personamem

./: .gitignore  embedding.py  eval.py  llm.py  memory.py  playground.ipynb  pyproject.toml  split.py  utils.py
data/: personamem_index_32k.pkl
data/PersonaMem/bowen-upenn___persona_mem/benchmark/0.0.0/2d676b2aeeddd1ee2ff4ff611bf867fcb2261d6e/: dataset_info.json  persona_mem-32k.arrow
